--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,143 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="md_theme_primary">#725B29</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#C4A76D</color>
+    <color name="md_theme_onPrimaryContainer">#503C0C</color>
+    <color name="md_theme_secondary">#242525</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#3A3A3A</color>
+    <color name="md_theme_onSecondaryContainer">#A5A4A3</color>
+    <color name="md_theme_tertiary">#825104</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#9F691F</color>
+    <color name="md_theme_onTertiaryContainer">#FFFBFF</color>
+    <color name="md_theme_error">#900708</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#B3261E</color>
+    <color name="md_theme_onErrorContainer">#FFCBC4</color>
+    <color name="md_theme_background">#FFF8F2</color>
+    <color name="md_theme_onBackground">#1E1B17</color>
+    <color name="md_theme_surface">#FCF8F8</color>
+    <color name="md_theme_onSurface">#1C1B1B</color>
+    <color name="md_theme_surfaceVariant">#E0E3E3</color>
+    <color name="md_theme_onSurfaceVariant">#444748</color>
+    <color name="md_theme_outline">#747878</color>
+    <color name="md_theme_outlineVariant">#C4C7C7</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#313030</color>
+    <color name="md_theme_inverseOnSurface">#F4F0EF</color>
+    <color name="md_theme_inversePrimary">#E1C386</color>
+    <color name="md_theme_primaryFixed">#FFDFA0</color>
+    <color name="md_theme_onPrimaryFixed">#261A00</color>
+    <color name="md_theme_primaryFixedDim">#E1C386</color>
+    <color name="md_theme_onPrimaryFixedVariant">#594413</color>
+    <color name="md_theme_secondaryFixed">#E4E2E1</color>
+    <color name="md_theme_onSecondaryFixed">#1B1C1C</color>
+    <color name="md_theme_secondaryFixedDim">#C8C6C6</color>
+    <color name="md_theme_onSecondaryFixedVariant">#474747</color>
+    <color name="md_theme_tertiaryFixed">#FFDDB8</color>
+    <color name="md_theme_onTertiaryFixed">#2B1700</color>
+    <color name="md_theme_tertiaryFixedDim">#FCBA69</color>
+    <color name="md_theme_onTertiaryFixedVariant">#663E00</color>
+    <color name="md_theme_surfaceDim">#DDD9D9</color>
+    <color name="md_theme_surfaceBright">#FCF8F8</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#F7F3F2</color>
+    <color name="md_theme_surfaceContainer">#F1EDEC</color>
+    <color name="md_theme_surfaceContainerHigh">#EBE7E7</color>
+    <color name="md_theme_surfaceContainerHighest">#E5E2E1</color>
+    <color name="md_theme_primary_mediumContrast">#463303</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#826A36</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#242525</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#3A3A3A</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#CECCCB</color>
+    <color name="md_theme_tertiary_mediumContrast">#4F2F00</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#966218</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_error_mediumContrast">#740003</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#B3261E</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#FFF8F2</color>
+    <color name="md_theme_onBackground_mediumContrast">#1E1B17</color>
+    <color name="md_theme_surface_mediumContrast">#FCF8F8</color>
+    <color name="md_theme_onSurface_mediumContrast">#111111</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#E0E3E3</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#333737</color>
+    <color name="md_theme_outline_mediumContrast">#4F5354</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#6A6E6E</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#313030</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#F4F0EF</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#E1C386</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#826A36</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#685220</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#6D6D6D</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#555555</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#966218</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#794A00</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#C9C6C5</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#FCF8F8</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#F7F3F2</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#EBE7E7</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#DFDCDB</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#D4D1D0</color>
+    <color name="md_theme_primary_highContrast">#3A2900</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#5B4615</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#242525</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#3A3A3A</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FEFCFB</color>
+    <color name="md_theme_tertiary_highContrast">#412600</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#694000</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#610002</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#950C0B</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#FFF8F2</color>
+    <color name="md_theme_onBackground_highContrast">#1E1B17</color>
+    <color name="md_theme_surface_highContrast">#FCF8F8</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#E0E3E3</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#000000</color>
+    <color name="md_theme_outline_highContrast">#292D2D</color>
+    <color name="md_theme_outlineVariant_highContrast">#464A4A</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#313030</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#E1C386</color>
+    <color name="md_theme_primaryFixed_highContrast">#5B4615</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#423001</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#494949</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#323333</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#694000</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#4A2C00</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#BBB8B7</color>
+    <color name="md_theme_surfaceBright_highContrast">#FCF8F8</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#F4F0EF</color>
+    <color name="md_theme_surfaceContainer_highContrast">#E5E2E1</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#D7D4D3</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#C9C6C5</color>
 </resources>
